implemented staff Verification functionality on status action buttons.........

--- a/src/app/modules/admin/components/done-packing-action/done-packing-action.component.html
+++ b/src/app/modules/admin/components/done-packing-action/done-packing-action.component.html
@@ -56,10 +56,35 @@
 
 
         <button (click)="packingDone($event)"  [value]="packingdone"  (click)="submit()" mat-raised-button color="primary" 
-            style="margin-left:10px;width: 90px;">Confirm</button>
+            style="margin-left:10px;width: 90px;" [disabled]="firstformdisable">Confirm</button>
         <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus"
             hidden>
         <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
     </div>
 
 </form>
+
+<div *ngIf="secondFormPopupVisible" id="secondformmaindiv">
+
+    <form [formGroup]="packingdoneform" id="secondform">
+        <div class="row">
+            <div class="col-3">
+
+                <input type="text" formControlName="orderId" class="form-control" [(ngModel)]="Orderdetails.orderId"
+                    placeholder="{{Orderdetails.orderId}}" hidden>
+
+            </div>
+            <label id="enterstafflablel">Enter Staff Code: </label>
+            <div class="col-3" id="staffcd">
+                <input type="text" formControlName="staffCd" class="form-control">
+            </div>
+
+            <div class="col-3" id="sbmtbtn">
+                <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
+
+            </div>
+        </div>
+
+
+    </form>
+</div>
