--- a/src/app/modules/admin/components/done-packing-action/done-packing-action.component.scss
+++ b/src/app/modules/admin/components/done-packing-action/done-packing-action.component.scss
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
 
 #form{
     width: 1300px;
@@ -75,6 +79,34 @@ b{
 .hide-input-border {
     border: none;
     outline: none;
+  }
+
+
+  #secondform{
+    margin-top: -100px;
+  }
+  #secondformmaindiv{
+    border: ridge 10px;
+  width: 800px;
+  height: 200px;
+  margin-top: 50px;
+  margin-left: 250px;
+  }
+  #staffcd{
+    margin-top: 120px;
+    position: absolute;
+    margin-left: 160px;
+  }
+  
+  #sbmtbtn{
+    margin-top: 200px;
+    margin-left: 300px;
+    position: absolute;
+  }
+  #enterstafflablel{
+    margin-top: 130px;
+    margin-left: 20px;
+    font-size: 18px;
   }
 
 
