--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.scss
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
 
 
 
@@ -5,6 +9,7 @@
 #form{
     width:1200px;
     height: auto;
+    overflow: auto;
   //  border: ridge 3px;
 }
 
@@ -58,4 +63,29 @@ h1{
   position: absolute;
 }
 
+#secondform{
+  margin-top: -100px;
+}
+#secondformmaindiv{
+  border: ridge 10px;
+width: 800px;
+height: 200px;
+margin-top: 50px;
+margin-left: 250px;
+}
+#staffcd{
+  margin-top: 120px;
+  position: absolute;
+  margin-left: 160px;
+}
 
+#sbmtbtn{
+  margin-top: 200px;
+  margin-left: 300px;
+  position: absolute;
+}
+#enterstafflablel{
+  margin-top: 130px;
+  margin-left: 20px;
+  font-size: 18px;
+}
