--- a/src/app/modules/admin/components/qc-done-action/qc-done-action.component.html
+++ b/src/app/modules/admin/components/qc-done-action/qc-done-action.component.html
@@ -1,6 +1,3 @@
-
-
-
 <button [print]="['printqcdoneform', config]" id="printbtn">Print</button>
 <form [formGroup]="qualitcheckdoneform" id="form">
     <h1>QC Conformation</h1>
@@ -29,14 +26,14 @@
                     <td>{{item.productSku}}</td>
                     <td>12345678</td>
                     <td>{{item.quantity}}</td>
-                   
-                    <label style="margin-top: 50px; font-size: 20px;"> 
+
+                    <label style="margin-top: 50px; font-size: 20px;">
                         <input type="checkbox" (change)="onCheckboxChange($event)" style="width: 25px;height: 25px;">
                         Yes
-                      </label>
-              
+                    </label>
 
-                       
+
+
 
                 </tr>
 
@@ -44,16 +41,45 @@
         </table>
     </div>
     <div id="submittedbtns">
-                   
-        <button class="btn btn-success" (click)="success($event)" [value]="Qcsuccess" (click)="paymentSuccess()" style="width: 100px;"[disabled]="isSubmitDisabled" >DONE</button>
-        <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
 
-        <button class="btn btn-primary" (click)="failed($event)" [value]="Qcfailed" (click)="paymentFailed()" style="margin-left:20px;width:100px">FAIL</button>
-        <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus" hidden>
+        <button class="btn btn-success" (click)="success($event)" [value]="Qcsuccess" (click)="QcSuccess()"
+            style="width: 100px;" [disabled]="isSubmitDisabled" [disabled]="firstformdisable">DONE</button>
+        <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus"
+            hidden>
+
+        <button class="btn btn-primary" (click)="failed($event)" [value]="Qcfailed" (click)="QcFailed()"
+            style="margin-left:20px;width:100px">FAIL</button>
+        <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus"
+            hidden>
 
         <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
 
     </div>
 
-   
+
 </form>
+
+<div *ngIf="secondFormPopupVisible" id="secondformmaindiv">
+
+    <form [formGroup]="qualitcheckdoneform" id="secondform">
+        <div class="row">
+            <div class="col-3">
+
+                <input type="text" formControlName="orderId" class="form-control" [(ngModel)]="Orderdetails.orderId"
+                    placeholder="{{Orderdetails.orderId}}" hidden>
+
+            </div>
+            <label id="enterstafflablel">Enter Staff Code: </label>
+            <div class="col-3" id="staffcd">
+                <input type="text" formControlName="staffCd" class="form-control">
+            </div>
+
+            <div class="col-3" id="sbmtbtn">
+                <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
+
+            </div>
+        </div>
+
+
+    </form>
+</div>
