--- a/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
+++ b/src/app/modules/admin/components/start-packing-action/start-packing-action.component.html
@@ -54,13 +54,35 @@
     <div id="submittedbtns">
 
 
-        <button (click)="filling($event);" [value]="startpacking" class="btn btn-success" (click)="submit()"
-            style="margin-left:10px;width: 90px;">Start</button>
+        <button (click)="startPacking($event);" [value]="startpacking" class="btn btn-success" (click)="submit()"
+            style="margin-left:10px;width: 90px;" [disabled]="firstformdisable">Start</button>
         <input type="text" placeholder="{{currentstatus}}" formControlName="statusCd" [(ngModel)]="currentstatus"
             hidden>
         <button mat-raised-button color="warn" mat-dialog-close style="margin-left: 20px;">Cancel</button>
     </div>
-
-
-
 </form>
+
+<div *ngIf="secondFormPopupVisible" id="secondformmaindiv">
+
+    <form [formGroup]="startpackingform" id="secondform">
+        <div class="row">
+            <div class="col-3">
+
+                <input type="text" formControlName="orderId" class="form-control" [(ngModel)]="Orderdetails.orderId"
+                    placeholder="{{Orderdetails.orderId}}" hidden>
+
+            </div>
+            <label id="enterstafflablel">Enter Staff Code: </label>
+            <div class="col-3" id="staffcd">
+                <input type="text" formControlName="staffCd" class="form-control">
+            </div>
+
+            <div class="col-3" id="sbmtbtn">
+                <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
+
+            </div>
+        </div>
+
+
+    </form>
+</div>
