--- a/src/app/modules/admin/components/verify-payment/verify-payment.component.html
+++ b/src/app/modules/admin/components/verify-payment/verify-payment.component.html
@@ -48,7 +48,7 @@
     <div id="submittedbtns">
 
         <button class="btn btn-success" (click)="success($event)" [value]="paymentverified" (click)="paymentSuccess()"
-            style="width: 100px;">PASS</button>
+            style="width: 100px;" [disabled]="firstformdisable" >PASS</button>
         <input type="text" placeholder="{{paymentsuccess}}" formControlName="statusCd" [(ngModel)]="paymentsuccess"
             hidden>
 
@@ -59,17 +59,29 @@
         <button mat-raised-button color="warn" mat-dialog-close style="margin-left:20px">Cancel</button>
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
 </form>
+
+<div *ngIf="secondFormPopupVisible" id="secondformmaindiv">
+
+    <form [formGroup]="verifypaymentform" id="secondform">
+        <div class="row">
+            <div class="col-3">
+
+                <input type="text" formControlName="orderId" class="form-control" [(ngModel)]="Orderdetails.orderId"
+                    placeholder="{{Orderdetails.orderId}}" [attr.disabled]="isDisabled ? true : null" hidden>
+
+            </div>
+            <label style="font-size: 18px; margin-top:80px;margin-left: 20px;">Enter Staff Code: </label>
+            <div class="col-3" id="staffcd">
+                <input type="text" formControlName="staffCd" class="form-control">
+            </div>
+
+            <div class="col-3" id="sbmtbtn">
+                <button type="submit" (click)="submitSecondForm()" class="btn btn-success">Submit</button>
+
+            </div>
+        </div>
+
+
+    </form>
+</div>
