--- a/src/app/modules/admin/components/order-history-page/order-history-page.component.html
+++ b/src/app/modules/admin/components/order-history-page/order-history-page.component.html
@@ -1,5 +1,5 @@
   
-  <button mat-raised-button color="" mat-dialog-close style="margin-left: 1000px;margin-top: -50px;">X</button>
+  <button mat-raised-button color="" mat-dialog-close  id="crossbtn">X</button>
   
   <h1>Order Status History</h1>
 <p> Order Id:#{{Orderhistory.orderId}}</p>
