--- a/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.scss
+++ b/src/app/modules/admin/components/add-new-catalog/add-new-catalog.component.scss
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
 .catalogName {
     font-size: large;
     margin-left: 5%;
