--- a/src/app/modules/admin/components/staff-list/staff-list.component.html
+++ b/src/app/modules/admin/components/staff-list/staff-list.component.html
@@ -1,58 +1,59 @@
- 
-
- 
- <div class="demo-button-container">
+<div class="demo-button-container">
     <button mat-raised-button class="demo-button" (click)="addStaffbtn()"> Add Staff </button>
-    <h1>Staff List</h1> 
+    <h1>Staff List</h1>
 </div>
-<div >
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" id="table">
+<div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table" id="table">
 
-    <ng-container matColumnDef="staffCd">
-        <th mat-header-cell *matHeaderCellDef>StaffCode</th>
-        <td mat-cell *matCellDef="let element">{{element.staffCd}}</td>
-    </ng-container>
+        <ng-container matColumnDef="staffCd">
+            <th mat-header-cell *matHeaderCellDef>StaffCode</th>
+            <td mat-cell *matCellDef="let element">{{element.staffCd}}</td>
+        </ng-container>
 
- 
-    <ng-container matColumnDef="staffName">
-        <th mat-header-cell *matHeaderCellDef>Staff Name</th>
-        <td mat-cell *matCellDef="let element">{{element.staffName}}</td>
-    </ng-container>
 
-  
-    <ng-container matColumnDef="mobileNo">
-        <th mat-header-cell *matHeaderCellDef>Mobile Number</th>
-        <td mat-cell *matCellDef="let element">{{element.mobileNo}}</td>
-    </ng-container>
+        <ng-container matColumnDef="staffName">
+            <th mat-header-cell *matHeaderCellDef>Staff Name</th>
+            <td mat-cell *matCellDef="let element">{{element.staffName}}</td>
+        </ng-container>
 
-  
-    <ng-container matColumnDef="emailId">
-        <th mat-header-cell *matHeaderCellDef>Email Id</th>
-        <td mat-cell *matCellDef="let element">{{element.emailId}}</td>
-    </ng-container>
-    <ng-container matColumnDef="startDt">
-        <th mat-header-cell *matHeaderCellDef>Start Date</th>
-        <td mat-cell *matCellDef="let element">{{element.startDt}}</td>
-    </ng-container>
-    <ng-container matColumnDef="endDt">
-        <th mat-header-cell *matHeaderCellDef>End Date</th>
-        <td mat-cell *matCellDef="let element">{{element.endDt}}</td>
-    </ng-container>
-    <ng-container matColumnDef="Actions">
-        <th mat-header-cell *matHeaderCellDef>Actions</th>
-        <td mat-cell *matCellDef="let element">
-        <div>
-            <i class="bi bi-pencil-square"></i>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16" (click)="updateStaff(element.staffCd)" style="color: cornflowerblue;">
-                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
-              </svg>
-        </div>
-        </td>
-      
-    </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+        <ng-container matColumnDef="mobileNo">
+            <th mat-header-cell *matHeaderCellDef>Mobile Number</th>
+            <td mat-cell *matCellDef="let element">{{element.mobileNo}}</td>
+        </ng-container>
+
+
+        <ng-container matColumnDef="emailId">
+            <th mat-header-cell *matHeaderCellDef>Email Id</th>
+            <td mat-cell *matCellDef="let element">{{element.emailId}}</td>
+        </ng-container>
+        <ng-container matColumnDef="startDt">
+            <th mat-header-cell *matHeaderCellDef>Start Date</th>
+            <td mat-cell *matCellDef="let element">{{element.startDt}}</td>
+        </ng-container>
+        <ng-container matColumnDef="endDt">
+            <th mat-header-cell *matHeaderCellDef>End Date</th>
+            <td mat-cell *matCellDef="let element">{{element.endDt}}</td>
+        </ng-container>
+        <ng-container matColumnDef="Actions">
+            <th mat-header-cell *matHeaderCellDef>Actions</th>
+            <td mat-cell *matCellDef="let element">
+                <div>
+                    <i class="bi bi-pencil-square"></i>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        class="bi bi-pencil-square" viewBox="0 0 16 16" (click)="updateStaff(element.staffCd)"
+                        style="color: cornflowerblue;">
+                        <path
+                            d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                        <path fill-rule="evenodd"
+                            d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5v11z" />
+                    </svg>
+                </div>
+            </td>
+
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 </div>
