--- a/src/app/modules/admin/components/staff-list/staff-list.component.scss
+++ b/src/app/modules/admin/components/staff-list/staff-list.component.scss
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
 #table {
      width:1800px;
      margin-left: 60px;
@@ -42,4 +46,43 @@
     color: green;
     font-family: initial;
     font-size: 31px;
+  }
+
+  @media screen and (min-width: 360px) and (max-width: 1400px) {
+    #table {
+      width:auto;
+      margin-left: 60px;
+      margin-right: 60px;
+      margin-top: 30px;
+      font-family: initial;
+      overflow-y: auto;
+      height: auto;
+     
+   }
+
+   h1{
+    margin-left: 450px;
+    position: absolute;
+    margin-top: -20px;
+    color: green;
+    font-family: initial;
+    font-size: 31px;
+  }
+  .mat-table {
+    overflow: auto;
+   
+  }
+
+  .demo-button-container {
+    padding-bottom: 16px;
+  }
+  
+  .demo-button  {
+    margin-left: 700px;
+    width: 200px;
+    margin-top: 90px;
+    font-size: 18px;
+    color: black;
+    background-color: rgb(143, 204, 206);
+  }
   }
