--- a/src/app/product-sku/product-sku.component.html
+++ b/src/app/product-sku/product-sku.component.html
@@ -5,12 +5,13 @@
 
         <div class="col-2">
             <label class="form-label">Price:</label>
-            <input type="text" class="form-control" id="price" name="price" [(ngModel)]="productSku.price"
+            <input type="number" class="form-control" id="price" name="price" [(ngModel)]="productSku.price"
                 formControlName="price">
             <div
                 *ngIf="AddproductSkuform.controls['price'].touched && AddproductSkuform.controls['price'] ?.['errors']">
                 <span *ngIf="form ['price'].getError('required')!=null" class="invalid"> enter price</span>
             </div>
+            
         </div>
 
 
@@ -60,16 +61,14 @@
             </div>
         </div>
 
-        <div class="form-group" class="col-2" class="textarea">
-            <label class="form-label">Description:</label>
-            <textarea class="form-control" rows="" id="skuDescription" name="skuDescription"
-                [(ngModel)]="productSku.skuDescription" formControlName="Description"></textarea>
 
-            <div
-                *ngIf="AddproductSkuform.controls['Description'].touched && AddproductSkuform.controls['Description'] ?.['errors']">
-                <span *ngIf="form ['Description'].getError('required')!=null" class="invalid"> enter Description</span>
-            </div>
+        <div class="form-check form-switch" id="toggle">
+            <p class="select">Select Availablity Status:</p>
+            <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked
+                [(ngModel)]="productSku.status" formControlName="status">
+            <span>{{productSku.status? 'Available' : 'Not-Available'}}</span>
         </div>
+
     </div>
 
 
@@ -100,16 +99,16 @@
             </div>
         </div>
 
+        <div class="form-group" class="col-2" class="textarea">
+            <label class="form-label">Description:</label>
+            <textarea class="form-control" rows="" id="skuDescription" name="skuDescription"
+                [(ngModel)]="productSku.skuDescription" formControlName="Description"></textarea>
 
-
-
-        <div class="form-check form-switch" id="toggle">
-            <p class="select">Select Availablity Status:</p>
-            <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked
-                [(ngModel)]="productSku.status" formControlName="status">
-            <span>{{productSku.status? 'Available' : 'Not-Available'}}</span>
+            <div
+                *ngIf="AddproductSkuform.controls['Description'].touched && AddproductSkuform.controls['Description'] ?.['errors']">
+                <span *ngIf="form ['Description'].getError('required')!=null" class="invalid"> enter Description</span>
+            </div>
         </div>
-
 
 
     </div>
@@ -118,9 +117,9 @@
 
     <div class="col-3" class="button">
         <button type="submit" class="btn btn-primary"
-            (click)=" onSubmit()">Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            (click)=" onSubmit()" >Save</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
         <button type="submit" class="btn btn-danger" (click)="cancel()">Cancel</button>
-
+        <div *ngIf="submitted && !AddproductSkuform.valid" class="text-danger">All fields are required.</div>
     </div>
 </form>
