--- a/src/app/product-sku/product-sku.component.scss
+++ b/src/app/product-sku/product-sku.component.scss
@@ -1,3 +1,7 @@
+/*
+ *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
+ *   All rights reserved.
+ */
 
   
 
@@ -9,13 +13,13 @@
     padding: 20px;
   }
   .textarea{
-    width:250px;
+    width:300px;
     height: 10px;
     margin-top: 20px;
   }
   
   .button{
-    margin-left: 170px;
+    margin-left: 210px;
     margin-top: 50px;
   
   }
@@ -23,7 +27,7 @@
     color: red;
   }
   #toggle{
-   margin-left: 550px;
+   margin-left: 510px;
    margin-top: -50px;
   }
 
@@ -37,7 +41,7 @@
     margin-top: -10px;
   }
   
-   @media only screen and (max-width: 800px) {
+   @media only screen and (max-width: 1200px) {
    
     [class*="col-2"] {
       width: 60%;
@@ -53,5 +57,33 @@
       height: 0px;
       margin-top: 5px;
     }
+
+}
+
+
+@media screen and (min-width: 500px) and (max-width: 1350px) {
+
+  .button{
+    margin-left: 170px;
+    margin-top: 140px;
+  
+  }
+  .textarea{
+    position: absolute;
+    width:300px;
+    height: 0px;
+    margin-top: 130px;
+  }
+
+  .select{
+    font-size: medium;
+    // margin-left: -50px;
+    // margin-top: -10px;
+  }
+  #toggle{
+    position: absolute;
+    margin-left: 100px;
+    margin-top: 360px;
+   }
 
 }
